welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: method mono2 overrides nothing
override def mono2(){
             ^